[gd_scene load_steps=6 format=3 uid="uid://dvbl1iv8m2tgv"]

[ext_resource type="Script" path="res://ui.gd" id="1_imkfp"]
[ext_resource type="FontFile" uid="uid://i4b03lo7uju5" path="res://assets/DS-DIGIB.TTF" id="1_qf43n"]
[ext_resource type="Texture2D" uid="uid://dfovv5up5hv7x" path="res://assets/button_smile.png" id="2_kwhu2"]
[ext_resource type="Texture2D" uid="uid://dvgarjrqbp1gl" path="res://assets/button_smile_pressed.png" id="3_bspji"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f644r"]
bg_color = Color(0, 0, 0, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_imkfp")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(0, 40)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="MineCountContainer" type="Panel" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_f644r")

[node name="MineCount" type="Label" parent="PanelContainer/HBoxContainer/MineCountContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_qf43n")
theme_override_font_sizes/font_size = 25
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameStatusButton" type="TextureButton" parent="PanelContainer/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_kwhu2")
texture_pressed = ExtResource("3_bspji")

[node name="TimerContainer" type="Panel" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_f644r")

[node name="Timer" type="Label" parent="PanelContainer/HBoxContainer/TimerContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_qf43n")
theme_override_font_sizes/font_size = 25
text = "000"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="PanelContainer/HBoxContainer/GameStatusButton" to="." method="_on_game_status_button_pressed"]
